# task-management

./: AGENTS.md  README.md  form.js  pyproject.toml  test.py
src/taskmanager/: .env  main.py  test_violation_example.py
src/taskmanager/controller/: __init__.py  auth_controller.py  task_controller.py
src/taskmanager/core/: __init__.py  config.py  deps.py
src/taskmanager/database/: __init__.py  db.py
src/taskmanager/model/: __init__.py  task.py  user.py
src/taskmanager/service/: __init__.py  auth_service.py  task_service.py
